<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/res4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/next4"
        android:layout_alignStart="@+id/res1"
        android:text="@string/result4" />

    <TextView
        android:id="@+id/res1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/next1"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="49dp"
        android:text="@string/result1" />

    <TextView
        android:id="@+id/res3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/next3"
        android:layout_alignStart="@+id/res1"
        android:text="@string/result3" />

    <EditText
        android:id="@+id/next4"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/next1"
        android:layout_below="@+id/prev3"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/next1"/>

    <EditText
        android:id="@+id/next3"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/next1"
        android:layout_below="@+id/prev2"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/next2"/>

    <EditText
        android:id="@+id/next2"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/next1"
        android:layout_below="@+id/next1"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/next3"/>

    <EditText
        android:id="@+id/next1"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/prev1"
        android:layout_marginStart="108dp"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/next4"/>

    <EditText
        android:id="@+id/prev1"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="53dp"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/previous1"/>

    <EditText
        android:id="@+id/prev2"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/next1"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/previous2"/>

    <EditText
        android:id="@+id/prev3"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/prev2"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/previous3"/>

    <EditText
        android:id="@+id/prev4"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/prev3"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/previous4"/>

    <TextView
        android:id="@+id/res2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/next2"
        android:layout_alignStart="@+id/res1"
        android:text="@string/result2" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/total"
        android:layout_below="@+id/total"
        android:layout_marginTop="-115dp"
        android:onClick="onButtonClick"
        android:text="@string/RafysButton" />

    <EditText
        android:id="@+id/total"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/unit1"
        android:layout_marginBottom="115dp"
        android:ems="10"
        android:hint="@string/total"
        android:inputType="number" />

    <TextView
        android:id="@+id/unit1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/res1"
        android:layout_marginEnd="120dp"
        android:text="Units" />

    <TextView
        android:id="@+id/Unit2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/unit1"
        android:layout_alignTop="@+id/res2"
        android:text="Units" />

    <TextView
        android:id="@+id/Unit3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/unit1"
        android:layout_alignTop="@+id/res3"
        android:text="Units" />

    <TextView
        android:id="@+id/Unit4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/unit1"
        android:layout_alignTop="@+id/res4"
        android:text="Units" />

    <TextView
        android:id="@+id/perUnits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/unit1"
        android:layout_marginBottom="224dp"
        android:text="Per Unit" />

</RelativeLayout>